<resources>
    <string name="app_name">Jumbo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="btnLoginLabel">Login</string>
    <string name="btnSendLabel">Send</string>
    <string name="btnContinueLabel">Continue</string>
    <string name="txtSkipLabel">Skip</string>
    <string name="txtBackLabel">Back</string>
    <string name="btnAcceptLabel">Accept</string>
    <string name="btnRegisterLabel">Register</string>
    <string name="txtVerifyCodeStarLabel">Verify Code*</string>
    <string name="txtVerifyCodeLabel">Verify Code</string>
    <string name="txtResetPasswordLabel">Reset Password</string>
    <string name="txtPasswordStarLabel">Password*</string>
    <string name="txtEmailAddressStarLabel">Email Address*</string>
    <string name="txtRePasswordStarLabel">Re-Password*</string>
    <string name="txtForgotPasswordLabel">Forgot Password</string>

    <string name="intro1ScreenText">Jumbo Brand</string>
    <string name="intro2ScreenText">The Real Value </string>
    <string name="intro3ScreenText">Unique Design</string>

    <string name="intro1Content">Coming to Jumbo Brand you can find the products here are quite diverse from: Tee, Bottom, Denim Jacket, Hoodie, accessories</string>
    <string name="intro3Content">The images are designed rebelliously, personality to help Jumbo products look cool and more play</string>
    <string name="intro2Content">Best Deal: Jumbo products provided with competitive prices and product quality are always guaranteed from material</string>

    <string name="contentDesIntro3">BgIntro3</string>
    <string name="contentDesIntro2">intro2</string>
    <string name="contentDesIntro1">BgIntro1</string>
    <string name="contentDesIntroApp">BgIntroApp</string>

    <string name="please_enter">Please Enter digit code that you received on your Email Address.</string>
    <string name="checkYourEmailVerifyCodeResetPassWordLabel">Check Your Email For Verify Code</string>
    <string name="createAccountLabel">Create an Account</string>
    <string name="haveAnAccountLabel">Have an Account?</string>
    <string name="enterYourDetailsInformationLabel">Enter your Details Informations</string>
    <string name="letsSignYouInLoginLabel">Let’s Sign You In</string>
    <string name="toContinueFirstVerifyThatItYouLoginLabel">To Continue, first Verify that it’s You.</string>
    <string name="dontHaveAnAccountLabel">Don’t have an Account?</string>
    <string name="setYourPasswordLabel">Set your Password?</string>
    <string name="rememberedYourPasswordLabel">Remembered Your Password?</string>
    <string name="pleaseEnterEmailAddressLabel">Please Enter your Email Address. Your will Receive a Code to Create a new Password via email.</string>
    <string name="txtNewPassStarLabel">New Password*</string>

    <string name="LabelProfiles">Profile</string>
    <string name="LabelMyOrdersHistory">My Orders History</string>
    <string name="DesImage">TODO</string>
    <string name="LabelMyFavorites">My Favorites</string>
    <string name="LabelShippingAddress">Shipping Address</string>
    <string name="Labelgiftcardsvouchers"><![CDATA[Gift Cards & Vouchers]]></string>
    <string name="LabelLogout">Logout</string>
    <string name="LabelUsername">User Name</string>
    <string name="LabelEmail">userEmail@gmail.com</string>
    <string name="btnEditlLabel">Edit</string>
    <string name="LabelVerifyNow">Verify Now</string>
    <string name="LabelVeriedUser">Verified</string>

    <string name="discoverLabel">Discover</string>
    <string name="homeLabel">Home</string>
    <string name="cartLabel">Cart</string>
    <string name="accountLabel">Profile</string>
    <!--    <string name="searchLabel">Search</string>-->
    <string name="contentDesImageCart">imageCartHome</string>
    <string name="categoriesLabel">Categories</string>
    <string name="txtViewAllLabel">View All</string>
    <string name="contentDesImage">top4CateImage</string>
    <string name="category_name">Category name</string>
    <string name="contentDesImageHotSale">hotSaleHome</string>
    <string name="trendingsLabel">Trendings</string>
    <string name="product_name_label">Product Name</string>
    <string name="product_price_label">Product Price</string>
    <string name="contentDesProductImage">Product Image</string>
    <string name="line">____________________________</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="contentDesImageButtonBack">Back button</string>
    <string name="categoryLabel">Category</string>
    <string name="contentDesImageButtonNext">Next</string>
    <string name="superSaleLabel">Super Sale</string>
    <string name="number_of_item_category">Number of item</string>
    <string name="newArrivalsLabel">New Arrivals</string>
    <string name="topTrendingLabel">Top Trendings</string>
    <string name="contentDesIconEdit">Icon Edit</string>

    <!--  Profile Shipping Address  -->
    <string name="PSA__title">Shipping Address</string>
    <string name="PSA__second_title">Address</string>
    <string name="PSA__btn_create_new_address">New address</string>
    <string name="PSA__edit">Edit</string>

    <!--  Create New Address  -->
    <string name="CNA__txtTitle">New Address</string>
    <string name="CNA__txtName">Full name*</string>
    <string name="CNA__txtPhone">Phone*</string>
    <string name="CNA__txtDetail">Detail*</string>
    <string name="CNA__cbxProvince">Province*</string>
    <string name="CNA__cbxDistrict">District*</string>
    <string name="CNA__cbxWard">Ward*</string>
    <string name="CNA__editName">Enter your name …</string>
    <string name="CNA__editPhone">Enter your phone …</string>
    <string name="CNA__editDetail">Enter detail address …</string>
    <string name="CNA__btnSubmit">Create</string>

    <!--  Fragment Cart  -->
    <string name="FA__title">Cart</string>
    <string name="FA__subTotal">Sub Total</string>
    <string name="FA__shippingFee">Shipping Fee</string>
    <string name="FA__estimatingTax">Estimating Tax</string>
    <string name="FA__total">Total</string>
    <string name="FA__checkOut">Checkout</string>

    <!--  Check Out  -->
    <string name="CO__title">Checkout</string>
    <string name="CO__addressTitle">Address</string>
    <string name="CO__addressContinue">Continue</string>
    <string name="CO__addressPlaceOrder">Place Order</string>

    <!--  Success Check Out  -->
    <string name="SCO__thanks">Thank you!</string>
    <string name="SCO__detail">Your Order is Completed.\nPlease Check the Delivery Status at\nHistory Order Pages.</string>
    <string name="SCO__btnExit">Continue Shopping</string>

    <string name="searchLabel">Search</string>
    <string name="searchProductHintLabel"><font size="16">Search Products</font></string>
    <string name="contentDesImageButtonSearch">Search Image</string>
    <string name="percentHintLabel">10%</string>
    <string name="old_price">Old Price</string>
    <string name="sale_off">Sale Off</string>
    <string name="strikethrough">-</string>
    <string name="descriptionLabel">Description</string>
    <string name="product_description_contents">Product description contents</string>
    <string name="txtColon">:</string>
    <string name="category_content">Category content</string>
    <string name="quantityLabel">Quantity</string>
    <string name="number_of_quantity">number of quantity</string>
    <string name="quantity_sold_label">Quantity Sold</string>
    <string name="number_quantity_sold">number quantity sold</string>
    <string name="add_to_cart_button_label">Add to Cart</string>
    <string name="similar_products">Similar Products</string>
    <string name="oneLabel">1</string>
    <string name="editProfilesLabel">Edit Profile</string>
    <string name="UserInformationLabel">User Information</string>
    <string name="firstNameLabel">First Name</string>
    <string name="lastNameLabel">Last Name</string>
    <string name="emailAddressLabel">Email Address</string>
    <string-array name="Gender">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="phoneLabel">Phone</string>
    <string name="btnSave">Save</string>
    <string name="genderLabel">Gender</string>
    <string name="active_your_account_label">Active Your Account</string>
    <string name="send_again_label"><u>Send again</u></string>
    <string name="get_some_trouble_with_verify_code">Get some trouble with your verify code?</string>
    <string name="you_have_not_placed_any_orders_yet">You have not placed any orders yet!</string>
    <string name="your_favorite_products_list_is_empty">Your favorite products list is empty!</string>
    <string name="status_label">Status</string>
    <string name="order_confirmed">Order confirmed</string>
    <string name="delivery_is_in_progress">Delivery is in progress</string>
    <string name="successfully_delivered">Successfully delivered</string>
    <string name="quantity_order_history">Quantity:</string>
    <string name="no_order_message">There are no orders here!</string>
    <string name="contact_us">Contact Us</string>
    <string name="jumbo_clothes">Jumbo Clothes</string>
    <string name="email_contact_us">Email:</string>
    <string name="nguyen_email">NguyenHTHE141002@fpt.edu.vn</string>
    <string name="tung_email">TungNMHE140062@fpt.edu.vn</string>
    <string name="bac_email">BacLNHE141006@fpt.edu.vn</string>
    <string name="duong_email">DuongNTHE140073@fpt.edu.vn</string>
    <string name="facebook_label">Facebook:</string>
    <string name="tung_facebook"><u>https://www.facebook.com/NMTung.Socialnetwork</u></string>
    <string name="nguyen_facebook"><u>https://www.facebook.com/mrlimfo</u></string>
    <string name="duong_Facebook"><u>https://www.facebook.com/ngthuyduong.mon2000</u></string>
    <string name="bac_facebook"><u>https://www.facebook.com/ABboyPD</u></string>
    <string name="textview">TextView</string>
    <string name="number_0">0</string>
    <string name="thanks_for_your_supports_3"><![CDATA[Thanks for your supports! <3]]></string>
    <string name="LabelFirstName">First Name*</string>
    <string name="LabelLastNameEdit">Last Name*</string>
    <string name="labelEmailAddress">Email Address* (Default)</string>
    <string name="labelGenderSelected">Choose Gender*</string>
    <string name="labelPhoneEdit">Phone Number*</string>
    <string name="change_password">Change Password</string>
    <string name="change_your_password">Change Your Password</string>
    <string name="enter_your_old_password_and_set_your_new_password_here">Enter Your Old Password And Set Your New Password Here!</string>
    <string name="re_password_Star">Re-Password*</string>
    <string name="new_password_star">New Password*</string>
    <string name="re_new_password_star">Old Password*</string>

</resources>