<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CheckOutSuccessActivity">

    <TextView
            android:text="@string/SCO__thanks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView34"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/discoverLabel"
            android:fontFamily="@font/poppins_semibold"
            app:layout_constraintTop_toBottomOf="@+id/imageView6"
            android:layout_marginTop="28dp" />

    <ImageView
            android:layout_width="167dp"
            android:layout_height="154dp"
            app:srcCompat="@drawable/ic_twotone_check_circle_24"
            android:id="@+id/imageView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="240dp" />

    <TextView
            android:text="@string/SCO__detail"
            android:layout_width="254dp"
            android:layout_height="57dp"
            android:id="@+id/textView35"
            android:textAlignment="center"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@+id/textView34"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496" />

    <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnScoContinue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/SCO__btnExit" />
</androidx.constraintlayout.widget.ConstraintLayout>